first round of testing complete
